dtext: fix flicker in [expand] elements.

--- a/app/javascript/src/styles/common/dtext.scss
+++ b/app/javascript/src/styles/common/dtext.scss
@@ -79,6 +79,7 @@ div.prose {
   }
 
   div.expandable-content {
+    display: none;
     padding: 0.4em;
     border-top: 1px solid #666;
 
